--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="sp_22">22sp</dimen>
     <dimen name="dp_56">56dp</dimen>
     <dimen name="dp_48">48dp</dimen>
@@ -77,4 +77,7 @@
     <declare-styleable name="LottieSwipeRefreshLayout">
         <attr name="lottie_rawRes" format="reference" />
     </declare-styleable>
+
+    <dimen name="design_bottom_navigation_active_text_size" tools:override="true">2sp</dimen>
+    <dimen name="design_bottom_navigation_active_icon_size">28dp</dimen>
 </resources>
