--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -80,4 +80,5 @@
 
     <dimen name="design_bottom_navigation_active_text_size" tools:override="true">2sp</dimen>
     <dimen name="design_bottom_navigation_active_icon_size">28dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
 </resources>
